<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/UpdatePicture" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/UpdateFromGallery" />
        <item
            android:id="@+id/nav_refresh"
            android:icon="@mipmap/ic_refresh_black_24dp"
            android:title="@string/Refresh" />

        <item
            android:id="@+id/nav_resetclock"
            android:icon="@mipmap/ic_timer_black_48dp"
            android:title="@string/ResetClock" />
        <item
            android:id="@+id/nav_sethrate"
            android:icon="@mipmap/ic_attach_money_black_24dp"
            android:title="@string/SetPayRate" />
        <item
            android:id="@+id/nav_LogoutProfile"
            android:icon="@mipmap/ic_exit_to_app_black_24dp"
            android:title="@string/LogOut" />
    </group>

    <item android:title="@string/Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share"/>
            <item
                android:id="@+id/nav_help"
                android:icon="@mipmap/ic_help_black"
                android:title="@string/Help"/>
        </menu>
    </item>

</menu>
