<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.smartworkflow.UserProfile"
    tools:showIn="@layout/app_bar_user_profile">

    <Chronometer
        android:id="@+id/chronometer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/CurrentTime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="7dp"
        android:text="@string/WorkedTime"
        app:layout_constraintRight_toLeftOf="@+id/chronometer1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="47dp"
        android:text="@string/InformationAtGlance"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewMonday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/Monday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textViewTuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/Tuesday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMonday" />

    <TextView
        android:id="@+id/textViewWednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/Wednesday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTuesday" />

    <TextView
        android:id="@+id/textViewThursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/Thursday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWednesday" />

    <TextView
        android:id="@+id/textViewFriday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/Friday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewThursday" />

    <TextView
        android:id="@+id/textViewSaturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/Saturday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFriday" />

    <TextView
        android:id="@+id/textViewSunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/Sunday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSaturday" />

    <TextView
        android:id="@+id/textViewMondayValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/Time00"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintLeft_toRightOf="@+id/textViewMonday"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textViewTuesdayValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time00"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintLeft_toRightOf="@+id/textViewTuesday"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewMondayValue" />

    <TextView
        android:id="@+id/textViewWednesdayValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="9dp"
        android:text="@string/Time00"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintLeft_toRightOf="@+id/textViewWednesday"
        app:layout_constraintTop_toBottomOf="@+id/textViewTuesdayValue" />

    <TextView
        android:id="@+id/textViewThursdayValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="9dp"
        android:text="@string/Time00"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintLeft_toRightOf="@+id/textViewThursday"
        app:layout_constraintTop_toBottomOf="@+id/textViewWednesdayValue" />

    <TextView
        android:id="@+id/textViewFridayValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="9dp"
        android:text="@string/Time00"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintLeft_toRightOf="@+id/textViewFriday"
        app:layout_constraintTop_toBottomOf="@+id/textViewThursdayValue" />

    <TextView
        android:id="@+id/textViewSaturdayValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="9dp"
        android:text="@string/Time00"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintLeft_toRightOf="@+id/textViewSaturday"
        app:layout_constraintTop_toBottomOf="@+id/textViewFridayValue" />

    <TextView
        android:id="@+id/textViewSundayValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="9dp"
        android:text="@string/Time00"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintLeft_toRightOf="@+id/textViewSunday"
        app:layout_constraintTop_toBottomOf="@+id/textViewSaturdayValue" />

    <ImageButton
        android:id="@+id/imageButtonClockStatus"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="47dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer1"
        app:srcCompat="@drawable/clockout" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="47dp"
        android:text="@string/ClockStatus"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintRight_toLeftOf="@+id/imageButtonClockStatus"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>
