<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartworkflow.UserProfile">
    <LinearLayout
        android:gravity="end"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom">
        <ImageButton
            android:layout_gravity="end"
            android:layout_width="51dp"
            android:layout_height="50dp"
            android:background="@mipmap/clockinout"
            android:adjustViewBounds="false"
            android:id="@+id/ClockInOut"
            android:layout_marginTop="335dp"/>
    </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/genericperson"
                android:id="@+id/ProfilePicture" />

            <TextView
                android:text="@string/large_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ProfilePicture" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/clockout"
                android:id="@+id/imageView"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:text="@string/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/UserName"
                android:layout_above="@+id/CompanyName"
                android:layout_toRightOf="@+id/ProfilePicture"
                android:layout_toEndOf="@+id/ProfilePicture"
                android:layout_marginBottom="29dp" />

            <TextView
                android:text="@string/Company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CompanyName"
                android:layout_above="@+id/textView3"
                android:layout_toRightOf="@+id/ProfilePicture"
                android:layout_toEndOf="@+id/ProfilePicture"
                android:layout_marginBottom="12dp" />

        </RelativeLayout>

    </ScrollView>


</FrameLayout>
